--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@monorepo-template/functions",
+  "name": "@scandi/functions",
   "version": "0.0.0",
   "dependencies": {
-    "@monorepo-template/core": "*",
+    "@scandi/core": "*",
     "sst": "*"
   },
   "devDependencies": {
