--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,6 +2,8 @@
   "name": "@scandi/functions",
   "version": "0.0.0",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.687.0",
+    "@aws-sdk/lib-dynamodb": "^3.687.0",
     "sst": "*"
   },
   "devDependencies": {
