--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.687.0",
+    "@aws-sdk/client-textract": "^3.687.0",
     "@aws-sdk/lib-dynamodb": "^3.687.0",
     "sst": "*"
   },
